# switzerland-power-calc

./: .env.example  .gitignore  Cargo.toml  README.md
src/: calc.rs  cli_helpers.rs  db.rs  error.rs  main.rs  season.rs  tourney.rs
src/sendou/: mod.rs  schema.rs  types.rs
switzerland-power-animated/: Cargo.toml  build.rs  splat_lang.rs
switzerland-power-animated/pdn/: top-player-marker.pdn
switzerland-power-animated/src/: alignment.rs  animation.rs  animations.rs  async_generator.rs  error.rs  font.rs  generator.rs  layout.rs  lib.rs  main.rs  status.rs  surface.rs  texts.rs
switzerland-power-animated/src/panes/: calc_rank_pane.rs  mod.rs  power_progress_pane.rs
switzerland-power-calc/: .env.example  Cargo.toml
switzerland-power-calc/src/: counts.rs  db.rs  error.rs  lang.rs  main.rs  migration.rs  tourney.rs
switzerland-power-calc/src/sendou/: cli_helpers.rs  discord.rs  lang.rs  leaderboard.rs  migration.rs  mod.rs  rank_set.rs  schema.rs  turbo_stream.rs  types.rs
