[workspace]
resolver = "3"
members = [
    "switzerland-power-animated",
    "switzerland-power-calc",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "sync"] }
itertools = "0.14.0"
derive_more = "2.1.1"
hashlink = "0.11.0"
