[package]
name = "switzerland-power-animated"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "generate-switzerland-animation"
path = "src/main.rs"

[dependencies]
thiserror.workspace = true
webp = "0.3.1"
tokio.workspace = true
itertools.workspace = true
smallvec = "1.15.1"

[dependencies.sdl2]
version = "0.38.0"
default-features = false
features = ["ttf", "image", "gfx", "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image", "sdl2-ttf", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg"
rev = "2025.09.17" # release 2024.05.24 # to check for a new one, check https://github.com/microsoft/vcpkg/releases

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
