[package]
name = "switzerland-power-animated"
version = "0.1.0"
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
webp = "0.3.1"
tokio.workspace = true
itertools.workspace = true
smallvec = "1.15.1"
derive_more = { workspace = true, features = ["from_str"] }
crossbeam-channel = "0.5.15"

[dependencies.sdl2]
version = "0.38.0"
default-features = false
features = ["ttf", "image", "static-link", "use-vcpkg"]

[build-dependencies]
serde_json = "1.0.145"
derive_more = { workspace = true, features = ["from_str"] }
hashlink.workspace = true
parse-format = "0.1.0"

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image", "sdl2-ttf"]
git = "https://github.com/microsoft/vcpkg"
rev = "2026.01.16" # to check for a new one, check https://github.com/microsoft/vcpkg/releases

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
