[package]
name = "switzerland-power-calc"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
skillratings = { version = "0.27.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
thiserror.workspace = true
strsim = "0.11.1"
hashlink.workspace = true
ansi_term = "0.12.1"
totally-ordered = "0.2.0"
itertools.workspace = true
tokio.workspace = true
reqwest = { version = "0.11.27", features = ["json"] }
url = "2.5.7"
dotenvy = "0.15.7"
serenity = { version = "0.12.4", default-features = false, features = ["rustls_backend", "client", "gateway", "cache", "model"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
serde_json = "1.0.143"
serde_repr = "0.1.20"
serde_with = "3.14.0"
chrono = { version = "0.4.42", features = ["serde"] }
indexset = "0.12.3"
unic-emoji-char = "0.9.0"
dashmap = "6.1.0"
derive_more = { workspace = true, features = ["display"] }
switzerland-power-animated = { path = "../switzerland-power-animated" }
rustyline-async = "0.4.7"
