[package]
name = "switzerland-power-calc"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { version = "4.5.58", features = ["derive"] }
skillratings = { version = "0.28.2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_cbor = "0.11.2"
thiserror.workspace = true
strsim = "0.11.1"
hashlink.workspace = true
ansi_term = "0.12.1"
totally-ordered = "0.2.0"
itertools.workspace = true
tokio.workspace = true
reqwest = { version = "0.12.28", features = ["json"] }
url = "2.5.8"
dotenvy = "0.15.7"
serenity = { version = "0.12.5", default-features = false, features = ["rustls_backend", "client", "gateway", "cache", "model", "chrono"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_repr = "0.1.20"
serde_with = { version = "3.16.1", features = ["json"] }
chrono = { version = "0.4.43", features = ["serde"] }
unic-emoji-char = "0.9.0"
dashmap = "6.1.0"
derive_more = { workspace = true, features = ["display"] }
switzerland-power-animated = { path = "../switzerland-power-animated" }
rustyline-async = "0.4.7"
